# CommonWords

./: .gitattributes  .gitignore  CommonWords.1  CommonWords_linked.c  CommonWords_main.c  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  libword.h  readme.md
.github/workflows/: codeql.yml  flawfinder.yml
CodeBlocks/: CommonWords.cbp  CommonWords.depend
CommonWords.xcodeproj/: project.pbxproj
autom4te.cache/: output.0  requests  traces.0
src/: CommonWords_linked.c  CommonWords_main.c  libword.c
